# buildabot

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/handlers/messagecreate/: autoresponse.cpp  autoresponse.h
src/util/: config.cpp  config.h
